--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,7 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql-connector-java.version}</version>
-			<scope>provided</scope>
+			<!--  <scope>provided</scope> -->
 		</dependency>
 
 		<!-- tomcat jdbc -->
@@ -146,6 +146,20 @@
 			<artifactId>tomcat-jdbc</artifactId>
 			<version>${tomcat-jdbc.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.5.0-b01</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>activation</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		
+
 
 		<!-- Spring ACL (c3p0 may be temporary) -->
 	    <dependency>
@@ -225,6 +239,12 @@
 		   <artifactId>spring-context-support</artifactId>
 		   <version>${spring.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.3</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
